Html little bit done

--- a/container.html
+++ b/container.html
@@ -6,6 +6,18 @@
     <title>Document</title>
   </head>
   <body>
+    <button style="padding: 20px; margin: 0px 50%">
+      <a href="container.html">Container</a>
+    </button>
+    <button style="padding: 20px; margin: 0px 50%">
+      <a href="image&list_teg.html">IMAGES</a>
+    </button>
+    <button style="padding: 20px; margin: 0px 50%">
+      <a href="input_Types.html">INPUT</a>
+    </button>
+    <button style="padding: 20px; margin: 0px 50%">
+      <a href="table.html">TABLE</a>
+    </button>
     <header></header>
     <main>
       <section style="padding: 20px 500px; background-color: skyblue">
