--- a/index.html
+++ b/index.html
@@ -8,6 +8,19 @@
   <body>
     <h1>Wanna be programmer</h1>
 
+    <button style="padding: 20px; margin: 0px 50%">
+      <a href="container.html">Container</a>
+    </button>
+    <button style="padding: 20px; margin: 0px 50%">
+      <a href="image&list_teg.html">IMAGES</a>
+    </button>
+    <button style="padding: 20px; margin: 0px 50%">
+      <a href="input_Types.html">INPUT</a>
+    </button>
+    <button style="padding: 20px; margin: 0px 50%">
+      <a href="table.html">TABLE</a>
+    </button>
+
     <!-- <p>
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores
       laboriosam sequi quibusdam
@@ -76,8 +89,5 @@
         laboriosam possimus?
       </p>
     </div>
-    <button style="padding: 20px; margin: 0px 50%">
-      <a href="container.html">Container</a>
-    </button>
   </body>
 </html>
